--- a/App1/templates/index.html
+++ b/App1/templates/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8">   
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather App</title>
@@ -31,7 +31,7 @@
             <div class="weather__datetime">{{ data.time }}</div>
             <div class="weather__forecast">Forecast information here</div>
             <div class="weather__icon">
-                <!-- Icon based on weather condition can go here -->
+               <img src="../static/img/40d0826ad647e45505eeb400344a0d44-removebg-preview.png" alt="">
             </div>
             <p class="weather__temperature">{{ data.temperature }}</p>
             <div class="weather__minmax">
